--- a/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/_Imports.razor
+++ b/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using EmpresaDeliveryGodSpeed
 @using EmpresaDeliveryGodSpeed.Shared
+@using Radzen
+@using Radzen.Blazor
