--- a/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/Pages/Index.razor
+++ b/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/Pages/Index.razor
@@ -2,8 +2,6 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<h1>Empresa de Envios "GodSpeed"</h1>
+<h2>¡Entregas en Tegucigalpa y Comayagüela!</h2>
+<h3>Sistema de registro de entregas</h3>
