--- a/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/Shared/NavMenu.razor
+++ b/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/Shared/NavMenu.razor
@@ -11,9 +11,19 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="oi oi-home" aria-hidden="true"></span> Inicio
             </NavLink>
         </div>
+
+        <AuthorizeView Roles="Administrador">
+            <Authorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="Usuarios">
+                        <span class="iconify" data-icon="carbon:user-multiple" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Usuarios <!--Ojo-->
+                    </NavLink>
+                </div>
+            </Authorized>
+        </AuthorizeView>
 
         <AuthorizeView Roles="Administrador, Usuario">
             <Authorized>
