--- a/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/Pages/Index.razor
+++ b/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/Pages/Index.razor
@@ -2,6 +2,18 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Empresa de Envios "GodSpeed"</h1>
+<h1>Empresa de Envíos "GodSpeed"</h1>
 <h2>¡Entregas en Tegucigalpa y Comayagüela!</h2>
 <h3>Sistema de registro de entregas</h3>
+<br />
+<br />
+<h2>Siguenos en nuestras redes sociales:</h2>
+<h3>facebook.com/GodSpeedDeliveries</h3>
+<h3>Instagram.com/GodSpeedDeliveriesHonduras</h3>
+<br />
+<br />
+<h2>Contáctenos al teléfono: 2233-8811</h2>
+<h2>¡Visítenos! Estamos ubicados en la colonia El Pedregal, frente al instituto Nido de Aguilas</h2>
+
+
+
