--- a/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/Pages/MisRepartidores/NuevoRepartidor.razor
+++ b/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/Pages/MisRepartidores/NuevoRepartidor.razor
@@ -56,4 +56,8 @@
             </div>
         </EditForm>
     </Authorized>
+
+    <NotAuthorized>
+        <h1>No tiene los permisos requeridos</h1>
+    </NotAuthorized>
 </AuthorizeView>
