--- a/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/Shared/MainLayout.razor
+++ b/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/Shared/MainLayout.razor
@@ -1,9 +1,9 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>EmpresaDeliveryGodSpeed</PageTitle>
+<PageTitle>Empresa Delivery GodSpeed</PageTitle>
 
 <div class="page">
-    <div class="sidebar">
+    <div style="background-image:none;background-color:#A569BD;" class="sidebar">
         <NavMenu />
     </div>
 
