--- a/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/Pages/MisRepartidores/EditarRepartidor.razor
+++ b/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/Pages/MisRepartidores/EditarRepartidor.razor
@@ -66,5 +66,7 @@
 
     </Authorized>
 
-
+    <NotAuthorized>
+        <h1>No tiene los permisos requeridos</h1>
+    </NotAuthorized>
 </AuthorizeView>
