--- a/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/Pages/MisRepartidores/Repartidores.razor
+++ b/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/Pages/MisRepartidores/Repartidores.razor
@@ -95,4 +95,8 @@
             </table>
         }
     </Authorized>
+
+    <NotAuthorized>
+        <h1>No tiene los permisos requeridos</h1>
+    </NotAuthorized>
 </AuthorizeView>
