--- a/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/Pages/MisUsuarios/EditarUsuario.razor
+++ b/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/Pages/MisUsuarios/EditarUsuario.razor
@@ -68,4 +68,8 @@
         </EditForm>
     </Authorized>
 
+    <NotAuthorized>
+        <h1>No tiene los permisos requeridos</h1>
+    </NotAuthorized>
+
 </AuthorizeView>
