--- a/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/Pages/MisUsuarios/NuevoUsuario.razor
+++ b/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/Pages/MisUsuarios/NuevoUsuario.razor
@@ -66,4 +66,8 @@
         </EditForm>
     </Authorized>
 
+    <NotAuthorized>
+        <h1>No tiene los permisos requeridos</h1>
+    </NotAuthorized>
+
 </AuthorizeView>
