--- a/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/Pages/MisUsuarios/Usuarios.razor
+++ b/G1ProyectoFinalLPIII2000UNAH2022/EmpresaDeliveryGodSpeed/Pages/MisUsuarios/Usuarios.razor
@@ -50,4 +50,8 @@
 
     </Authorized>
 
+    <NotAuthorized>
+        <h1>No tiene los permisos requeridos</h1>
+    </NotAuthorized>
+
 </AuthorizeView>
